--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   },
   "license": "MIT",
   "keywords": [
-    "file system"
+    "dir",
+    "file",
+    "file system",
+    "path"
   ],
   "dependencies": {
     "caro": "latest"
   },
   "devDependencies": {
     "coffee-script": "~1.9.3",
+    "chai": "~2.3.0",
     "grunt": "~0.4.5",
     "grunt-contrib-coffee": "~0.13.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-nodeunit": "~0.4.0",
     "grunt-mocha-test": "~0.12.7",
-    "mocha": "~2.2.4",
-    "chai": "~2.3.0"
+    "mocha": "~2.2.4"
   }
 }
