--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "file system",
     "path"
   ],
+  "scripts": {
+    "test": "grunt test"
+  },
   "dependencies": {
     "caro": "latest"
   },
